k8s/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-staging
  labels:
    app.kubernetes.io/part-of: marriott-application
    app.kubernetes.io/managed-by: kustomize
    environment: staging
